<resources>
    <string name="app_name">Branch and ATM Locator</string>
    <string name="btn_view_map">View Map</string>
    <string name="btn_view_list">View List</string>
    <string name="btnTypeFilter_content_description">Filter List</string>
    <string name="list_item_locations_address">address</string>
    <string name="list_item_locations_name">Name</string>
    <string name="type">Type</string>
    <string name="qr_tag">QR Tag</string>
    <string name="phone_number">Phone Number</string>
    <string name="fax_number">Fax Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSearch">search</string>
    <string name="apiCallLoading">Please wait while we search for results...</string>
    <string name="btnGetDirections">Get Directions</string>
</resources>